Use --illegal-access=deny